# blu-ray

./: .env.example  .gitignore  App.config  Blu-Ray.csproj  Blu-Ray.sln  Cargo.toml  LICENSE  Main.cs  README.md  bank.py  brfilter.py  casino.py  config.example.json  config.example.py  economy.py  fun.py  info.py  main.py  nsfw.py  owner.py  packages.config  settings.py  tags.json  tags.py  tagso.json
Bot/: App.config  Bot.csproj  Configuration.cs  Main.cs  config.example.json  packages.config
Bot/Commands/: Fun.cs  Info.cs  NSFW.cs  Owner.cs  Search.cs
Bot/Managers/: AFK.cs  Events.cs  Spotify.cs
Bot/Properties/: AssemblyInfo.cs
Bot/Structures/: Configuration.cs  IMDb.cs  NekosLifeImage.cs  NekosLifeWhyQuestion.cs  Rule34Entry.cs  Spotify.cs
C#/: README.md  config.example.json
C#/Commands/: Info.cs  Settings.cs
C#/Managers/: AFK.cs  Database.cs  Events.cs  Google.cs  Spotify.cs
C#/Properties/: AssemblyInfo.cs
C#/Structures/: Emojis.cs  IMDb.cs  NekosLifeImage.cs  NekosLifeWhyQuestion.cs  Rule34Entry.cs  Stringify.cs
Commands/: Fun.cs  Info.cs  Moderation.cs  NSFW.cs  Owner.cs  Search.cs  Settings.cs
Managers/: AFK.cs  ColorDetection.cs  Database.cs  Events.cs  GarbageCollection.cs  Google.cs  Help.cs  PermissionStringify.cs  Spotify.cs  Starboard.cs
Properties/: AssemblyInfo.cs
Structures/: ColorDetection.cs  Configuration.cs  IMDb.cs  NekosLifeImage.cs  NekosLifeWhyQuestion.cs  Rule34Entry.cs
Types/: CommandModule.cs
src/: main.rs
src/commands/: info.rs
